# CDT

./: .clang-format  .gitignore  .gitmodules  .mailmap  CDT.cpp  CDT.h  CDTUtils.h  CDTUtils_8h.html  CDTUtils_8h.js  CDTUtils_8h__dep__incl.map  CDTUtils_8h__dep__incl.md5  CDTUtils_8h__incl.map  CDTUtils_8h__incl.md5  CDTUtils_8h_source.html  CDTUtils_8hpp.html  CDTUtils_8hpp.js  CDTUtils_8hpp__dep__incl.map  CDTUtils_8hpp__dep__incl.md5  CDTUtils_8hpp__incl.map  CDTUtils_8hpp__incl.md5  CDTUtils_8hpp_source.html  CDT_8cpp.html  CDT_8cpp_source.html  CDT_8h.html  CDT_8h.js  CDT_8h__dep__incl.map  CDT_8h__dep__incl.md5  CDT_8h__incl.map  CDT_8h__incl.md5  CDT_8h_source.html  CDT_8hpp.html  CDT_8hpp.js  CDT_8hpp__dep__incl.map  CDT_8hpp__dep__incl.md5  CDT_8hpp__incl.map  CDT_8hpp__incl.md5  CDT_8hpp_source.html  InitializeWithGrid_8h.html  InitializeWithGrid_8h.js  InitializeWithGrid_8h__incl.map  (+171 more)
.github/workflows/: ci_builds.yml
CDT/: CMakeLists.txt  conan_basic_setup.cmake  conanfile.py
CDT/docs/: README.md
CDT/extras/: InitializeWithGrid.h  VerifyTopology.h
CDT/include/: CDT.h  CDT.hpp  CDTUtils.h  CDTUtils.hpp  KDTree.h  LocatorBoostRTree.h  LocatorKDTree.h  LocatorNearestRandom.h  PointRTree.h  Triangulation.h  Triangulation.hpp  portable_nth_element.hpp  predicates.h
CDT/src/: CDT.cpp
CDT/tests/: cdt.test.cpp
CDT/tests/expected/: 154_1.txt  154_2.txt  154_3.txt  Capital A__as-provided_ignore_all.txt  Capital A__as-provided_ignore_all.txt.off  Capital A__as-provided_ignore_outer.txt  Capital A__auto_ignore_all.txt  Capital A__auto_ignore_super.txt  Capital A__auto_resolve_all.txt  Capital A__auto_resolve_auto.txt  Capital A__conforming_randomized_ignore_auto.txt  Capital A__randomized_ignore_all.txt.off  Capital A__randomized_resolve_all.txt  Hanging2__as-provided_ignore_all.txt.off  Hanging2__auto_resolve_super.txt  Hanging2__conforming_randomized_ignore_auto.txt  Hanging2__randomized_ignore_all.txt  Hanging2__randomized_ignore_all.txt.off  Hanging2__randomized_resolve_all.txt  Hanging2__randomized_resolve_outer.txt  HangingIntersection__f64_auto_resolve_all.txt  Hanging__as-provided_resolve_all.txt  Hanging__as-provided_resolve_all.txt.off  Hanging__randomized_ignore_all.txt  Hanging__randomized_resolve_all.txt  Hanging__randomized_resolve_all.txt.off  Hanging__randomized_resolve_super.txt  Letter u__as-provided_ignore_super.txt  Letter u__as-provided_resolve_all.txt  Letter u__as-provided_resolve_all.txt.off  Letter u__auto_ignore_all.txt  Letter u__auto_ignore_super.txt  Letter u__randomized_ignore_all.txt  Letter u__randomized_ignore_all.txt.off  Letter u__randomized_resolve_all.txt  Letter u__randomized_resolve_outer.txt  Letter u__randomized_resolve_super.txt  OnEdge__as-provided_resolve_all.txt.off  OnEdge__auto_ignore_all.txt  OnEdge__auto_ignore_super.txt  (+244 more)
CDT/tests/inputs/: Hanging.txt  HangingIntersection.txt  OnEdge.txt  crossing-edges.txt  debug2.txt  ditch.txt  dont_flip_constraint_when_resolving_intersection.txt  double-hanging.txt  hanging3.txt  issue-142-double-hanging-edge.txt  issue-148-crossing-edges.txt  issue-42-full-boundary-overlap.txt  issue-42-hole-overlaps-bondary.txt  issue-42-multiple-boundary-overlaps.txt  issue-65-wrong-edges.txt  overlapping constraints.txt  square with crack.txt  test_data_small.txt  triple-hanging-flipped.txt  triple-hanging.txt
docs/: README.md
docs/doxygen-custom/: DoxygenLayout.xml  custom.css  header.html  logo.drawio
include/: CDT.h  CDT.hpp  CDTUtils.h  CDTUtils.hpp  PointRTree.h  predicates.h  remove_at.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  (+55 more)
test files/: Constrained Sweden.txt  LakeSuperior.txt  Letter u.txt  OnEdge2.txt  Orange County.txt  ProblematicCase1.txt  Sweden with constraints.txt  duplicates.txt  guitar no box.txt  guitar.txt  island.txt  overlapping constraints2.txt
utils/: VerifyTopology.h
visualizer/: CMakeLists.txt  main.cpp
visualizer/data/: Capital A.txt  Hanging2.txt  Sweden with constraints.txt  Sweden with duplicate points.txt  Sweden.txt  cdt.txt  cdt_duplicates.txt  corner cases.txt  gh_issue.txt  issue-42-full-boundary-overlap-2.txt  issue-42-multiple-boundary-overlaps-conform-to-edge.txt  kidney.txt  points_on_constraint_edge.txt  regression_issue_38_wrong_hull.txt  regression_issue_38_wrong_hull_small.txt  unit square.txt
